1. 试验日历控件重载的可行性 2. 将配置文件拆到QApplication中

--- a/resources.qrc
+++ b/resources.qrc
@@ -1,5 +1,6 @@
 <RCC>
   <qresource>
+    <file>res/note.png</file>
     <file>res/resting.png</file>
     <file>res/working.png</file>
     <file>res/tomato.png</file>
