--- a/tomato_dialog.ui
+++ b/tomato_dialog.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>番茄钟-未开始</string>
+   <string>惬意番茄钟-未开始</string>
   </property>
   <property name="windowIcon">
    <iconset resource="resources.qrc">
