--- a/resources.qrc
+++ b/resources.qrc
@@ -1,5 +1,7 @@
 <RCC>
   <qresource>
+    <file>res/ban.png</file>
+    <file>res/xiu.png</file>
     <file>res/note.png</file>
     <file>res/resting.png</file>
     <file>res/working.png</file>
